use configured legend graphic layer for vector layers

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -72,6 +72,7 @@
             "mapConfig": {
                 "projection": "EPSG:3857"
             },
+            "createLegendGraphicLayer": "bfs:planungsradien",
             "tools": [
                 "addWmsBtn",
                 "printBtn",
