--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,7 @@
   "author": "terrestris GmbH & Co. KG <info@terrestris.de>",
   "license": "GPL-3.0",
   "devDependencies": {
+    "acorn": "6.0.4",
     "eslint": "5.9.0",
     "expect.js": "0.3.1",
     "express": "4.16.4",
@@ -34,7 +35,7 @@
     "istanbul-middleware": "0.2.2",
     "jsdoc": "3.5.5",
     "jsduck": "1.1.2",
-    "karma": "3.1.1",
+    "karma": "3.1.3",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.2",
     "karma-coverage-istanbul-reporter": "2.0.4",
@@ -60,8 +61,8 @@
     "test": "test"
   },
   "dependencies": {
-    "antd": "3.10.9",
-    "geostyler": "0.22.1",
+    "antd": "3.11.0",
+    "geostyler": "0.25.0",
     "geostyler-geojson-parser": "0.4.6",
     "geostyler-openlayers-parser": "0.19.2",
     "geostyler-sld-parser": "0.18.0",
