fixes dokpool print

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -78,7 +78,8 @@
                 "addWmsBtn",
                 "printBtn",
                 "cloneBtn",
-                "selectFeaturesBtn"
+                "selectFeaturesBtn",
+                "irixPrintBtn"
             ],
             "vectorIcons": [
                 {
