readds tool visibility functionality

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -79,7 +79,11 @@
                 "printBtn",
                 "cloneBtn",
                 "selectFeaturesBtn",
-                "irixPrintBtn"
+                "irixPrintBtn",
+                "measureBtn",
+                "drawBtn",
+                "createVectorLayerBtn",
+                "vectorImportBtn"
             ],
             "vectorIcons": [
                 {
