renames vector import btn key

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -83,7 +83,7 @@
                 "measureBtn",
                 "drawBtn",
                 "createVectorLayerBtn",
-                "vectorImportBtn"
+                "importVectorLayerBtn"
             ],
             "vectorIcons": [
                 {
