--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "@openbfs/imis3gis",
-  "version": "1.15.0-SNAPSHOT",
+  "version": "1.16.0",
   "description": "IMIS3 GIS",
   "scripts": {
     "pretest": "npm run lint",
