--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -174,6 +174,9 @@
                 "uuid": "8bca3829-6f03-4d67-ab98-1c0bc3fcc0c4",
                 "label": "Local Vector Data Template (bundeslaender)"
             }],
+            "colorRamps": {
+                "GeoStyler": ["#E7000E", "#F48E00", "#FFED00", "#00943D", "#272C82", "#611E82"]
+            },
             "wmsUrls": ["http://ows.terrestris.de/osm/service",
                 "http://ows.mundialis.de/services/service" ],
             "drawLayerName": "Zeichnungen",
