--- a/src/package.json
+++ b/src/package.json
@@ -66,6 +66,7 @@
     "geostyler": "3.1.1",
     "geostyler-geojson-parser": "0.4.6",
     "geostyler-openlayers-parser": "1.1.0",
+    "geostyler-qgis-parser": "0.0.2",
     "geostyler-sld-parser": "0.18.0",
     "react": "16.8.3",
     "react-dom": "16.8.3"
