--- a/src/package.json
+++ b/src/package.json
@@ -27,16 +27,16 @@
   "author": "terrestris GmbH & Co. KG <info@terrestris.de>",
   "license": "GPL-3.0",
   "devDependencies": {
-    "acorn": "6.1.0",
+    "acorn": "6.1.1",
     "braces": "2.3.2",
-    "eslint": "5.14.1",
+    "eslint": "5.15.1",
     "expect.js": "0.3.1",
     "express": "4.16.4",
     "istanbul": "0.4.5",
     "istanbul-middleware": "0.2.2",
     "jsdoc": "3.5.5",
     "jsduck": "1.1.2",
-    "karma": "4.0.0",
+    "karma": "4.0.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.2",
     "karma-coverage-istanbul-reporter": "2.0.5",
@@ -51,7 +51,7 @@
     "npm-run-all": "4.1.5",
     "rimraf": "2.6.3",
     "serve-static": "1.13.2",
-    "sinon": "7.2.4"
+    "sinon": "7.2.7"
   },
   "bugs": {
     "url": "https://github.com/OpenBfS/gis_client/issues"
@@ -62,13 +62,14 @@
     "test": "test"
   },
   "dependencies": {
-    "antd": "3.13.6",
+    "antd": "3.15.0",
     "geostyler": "3.1.1",
     "geostyler-geojson-parser": "0.4.6",
+    "geostyler-mapbox-parser": "0.0.3",
     "geostyler-openlayers-parser": "1.1.0",
-    "geostyler-qgis-parser": "0.0.2",
+    "geostyler-qgis-parser": "0.1.1",
     "geostyler-sld-parser": "0.18.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3"
+    "react": "16.8.4",
+    "react-dom": "16.8.4"
   }
 }
