Cleanup & bug fixes video layer

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -37,7 +37,9 @@
         "GeoStylerQGISParser": false,
         "GeoStylerMapboxParser": false,
         "React": false,
-        "ReactDOM": false
+        "ReactDOM": false,
+        "requestAnimationFrame": false,
+        "cancelAnimationFrame": false
     },
     "rules": {
         "comma-dangle": 2,
