--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -22,53 +22,61 @@
                 "password": "admin"
             },
             "import": {
-              "allowCreateLayer": true,
-              "ruf": {
-                "workspace": "ruf-import",
-                "namespace": "www.imis.bfs.de/ruf",
-                "datastore": "ruf-import",
-                "baseUrl": "/ogc/",
-                "metadataBaseUrl": "/geonetwork/"
-              },
-              "imis": {
-                "workspace": "imis-import",
-                "namespace": "www.imis.bfs.de/imis",
-                "datastore": "imis-import",
-                "baseUrl": "/ogc/",
-                "metadataBaseUrl": "/geonetwork/"
-              }
+                "allowCreateLayer": true,
+                "ruf": {
+                    "workspace": "ruf-import",
+                    "namespace": "www.imis.bfs.de/ruf",
+                    "datastore": "ruf-import",
+                    "baseUrl": "http://bfs-docker/ogc/",
+                    "metadataBaseUrl": "/geonetwork/"
+                },
+                "imis": {
+                    "workspace": "imis-import",
+                    "namespace": "www.imis.bfs.de/imis",
+                    "datastore": "imis-import",
+                    "baseUrl": "http://bfs-docker/ogc/",
+                    "metadataBaseUrl": "/geonetwork/"
+                }
             },
             "imis_user": {
-              "imisroles": [
-                "ruf"
-              ],
-              "uid": "Fake Authuser",
-              "username": "Fake Authuser",
-              "userroles": [
-                "ruf",
-                "imis",
-                "bfs",
-                "public"
-              ]
+                "imisroles": [
+                    "ruf"
+                ],
+                "uid": "Fake Authuser",
+                "username": "Fake Authuser",
+                "userroles": [
+                    "ruf",
+                    "imis",
+                    "bfs",
+                    "public"
+                ]
             },
             "print-timeout": 60000,
-            "metadataSearchFields": ["title", "abstract"],
+            "metadataSearchFields": [
+                "title",
+                "abstract"
+            ],
             "spatialSearchTypeName": "bfs:verwaltung_4326_geozg_sort",
             "spatialSearchFields": {
                 "searchColumn": "NAME",
                 "geomColumn": "BOX_GEO"
             },
-            "startCenter": [1234075.4566814213, 6706481.04685707],
-            "startZoom": 6,
-            "mapLayers": [
+            "startCenter": [
+                1234075.4566814213,
+                6706481.04685707
             ],
-            "backgroundLayers": [{
-              "uuid":  "2f30477a-ca0a-43cb-a34b-fcee53e6bce7",
-              "thumb": "layer_sets/odl_thumb.png"
-            }, {
-              "uuid": "ec649cb5-04c7-40d4-bb03-2fb4e31cc896",
-              "thumb": "layer_sets/gewaesser_thumb.png"
-            }],
+            "startZoom": 6,
+            "mapLayers": [],
+            "backgroundLayers": [
+                {
+                    "uuid": "2f30477a-ca0a-43cb-a34b-fcee53e6bce7",
+                    "thumb": "layer_sets/odl_thumb.png"
+                },
+                {
+                    "uuid": "ec649cb5-04c7-40d4-bb03-2fb4e31cc896",
+                    "thumb": "layer_sets/gewaesser_thumb.png"
+                }
+            ],
             "mapConfig": {
                 "projection": "EPSG:3857"
             },
@@ -150,34 +158,52 @@
                     "caption": "sea"
                 }
             ],
-            "vectorProjections": [{
-                "code": "EPSG:3857",
-                "label": "EPSG:3857"
-            }, {
-                "code": "EPSG:4326",
-                "label": "EPSG:4326 (lon/lat)"
-            }, {
-                "code": "EPSG:4326-enu",
-                "label": "EPSG:4326 (lat/lon)"
-            }, {
-                "code": "EPSG:25832",
-                "label": "EPSG:25832"
-            }],
-            "vectorTemplates": [{
-                "uuid": "8bca3829-6f03-4d67-ab98-1c0bc3fcc0c4",
-                "label": "Local Vector Data Template (drinkwater)"
-            }, {
-                "uuid": "4acc0685-9713-45ce-8d2e-0e008f601e17",
-                "label": "Local Vector Data Template (buildings)"
-            }, {
-                "uuid": "8bca3829-6f03-4d67-ab98-1c0bc3fcc0c4",
-                "label": "Local Vector Data Template (bundeslaender)"
-            }],
+            "vectorProjections": [
+                {
+                    "code": "EPSG:3857",
+                    "label": "EPSG:3857"
+                },
+                {
+                    "code": "EPSG:4326",
+                    "label": "EPSG:4326 (lon/lat)"
+                },
+                {
+                    "code": "EPSG:4326-enu",
+                    "label": "EPSG:4326 (lat/lon)"
+                },
+                {
+                    "code": "EPSG:25832",
+                    "label": "EPSG:25832"
+                }
+            ],
+            "vectorTemplates": [
+                {
+                    "uuid": "8bca3829-6f03-4d67-ab98-1c0bc3fcc0c4",
+                    "label": "Local Vector Data Template (drinkwater)"
+                },
+                {
+                    "uuid": "4acc0685-9713-45ce-8d2e-0e008f601e17",
+                    "label": "Local Vector Data Template (buildings)"
+                },
+                {
+                    "uuid": "8bca3829-6f03-4d67-ab98-1c0bc3fcc0c4",
+                    "label": "Local Vector Data Template (bundeslaender)"
+                }
+            ],
             "colorRamps": {
-                "BfS": ["#E7000E", "#F48E00", "#FFED00", "#00943D", "#272C82", "#611E82"]
+                "BfS": [
+                    "#E7000E",
+                    "#F48E00",
+                    "#FFED00",
+                    "#00943D",
+                    "#272C82",
+                    "#611E82"
+                ]
             },
-            "wmsUrls": ["http://ows.terrestris.de/osm/service",
-                "http://ows.mundialis.de/services/service" ],
+            "wmsUrls": [
+                "http://ows.terrestris.de/osm/service",
+                "http://ows.mundialis.de/services/service"
+            ],
             "drawLayerName": "Zeichnungen",
             "redLineLayerName": "Messungen",
             "rodosFolderName": "RODOS-Prognosen"
