Fix import paths

--- a/src/app.json
+++ b/src/app.json
@@ -571,7 +571,9 @@
                 "lib/BasiGX/src/util/CopyClipboard.js",
                 "lib/BasiGX/src/util/CSRF.js",
                 "lib/BasiGX/src/util/Filter.js",
+                "lib/BasiGX/src/util/Jsonix.js",
                 "lib/BasiGX/src/util/Layer.js",
+                "lib/BasiGX/src/util/Namespace.js",
                 "lib/BasiGX/src/util/Geometry.js",
                 "lib/BasiGX/src/util/Map.js",
                 "lib/BasiGX/src/util/Object.js",
