Make attribute fields combos when editing chart data settings

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -56,6 +56,12 @@
                 "title",
                 "abstract"
             ],
+            "paramIsAttributeName": [
+                "yAxisAttribute",
+                "groupAttribute",
+                "detectionLimitAttribute",
+                "uncertaintyAttribute"
+            ],
             "spatialSearchTypeName": "bfs:verwaltung_4326_geozg_sort",
             "spatialSearchFields": {
                 "searchColumn": "NAME",
