Add detection limit button for bar charts

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -90,7 +90,8 @@
                 "measureBtn",
                 "drawBtn",
                 "createVectorLayerBtn",
-                "importVectorLayerBtn"
+                "importVectorLayerBtn",
+                "detectionLimitBtn"
             ],
             "vectorIcons": [
                 {
