Add support for vector layer timeseries charts

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -58,6 +58,7 @@
                 "abstract"
             ],
             "paramIsAttributeName": [
+                "xAxisAttribute",
                 "yAxisAttribute",
                 "groupAttribute",
                 "detectionLimitAttribute",
