--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 # This file is a template, and might need editing before it works on your project.
 # Official framework image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/node/tags/
-image: hwbllmnn/sencha-chrome-docker
+image: hwbllmnn/sencha-chrome-docker:6.7.0.63
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
@@ -32,8 +32,7 @@ before_script:
   - git clone git@gitlab.intranet.terrestris.de:libraries/ext-6.2.0.git /ext
   - cd src
   - ln -s /ext
-  - /root/bin/Sencha/Cmd/6.2.2.36/sencha app install --framework=ext
-  - /root/bin/Sencha/Cmd/6.2.2.36/sencha app build
+  - /root/bin/Sencha/Cmd/sencha app build
 
 test:
   stage: test
