--- a/src/package.json
+++ b/src/package.json
@@ -61,6 +61,7 @@
     },
     "dependencies": {
         "antd": "3.20.6",
+        "d3-time-format": "2.1.3",
         "geostyler": "4.2.2",
         "geostyler-geojson-parser": "1.0.0",
         "geostyler-mapbox-parser": "0.1.0",
