added build of d3-utils to travis, README and docker-build-app.sh
and upgraded SenchaCmd to 7.0.0.40 in CI builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,10 @@ before_install:
   - "./SenchaCmd-7.0.0.40-linux-amd64.sh -q -dir /opt/Sencha"
   - "curl -L http://cdn.sencha.com/ext/gpl/ext-6.2.0-gpl.zip -o ext-6.2.0-gpl.zip"
   - "unzip -qn ext-6.2.0-gpl.zip"
-  - "cd src"
+  - "cd src/resources/lib/d3-util"
+  - "npm install"
+  - "npm run start:dist"
+  - "cd ../../.."
   - "ln -s ../ext-6.2.0 ext"
   - "/opt/Sencha/sencha app install --framework=ext"
   - "/opt/Sencha/sencha app build"
