Add string drop handling

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,45 +1,46 @@
 {
     "globals": {
-        "Ext": true,
-        "GeoExt": true,
-        "ol": true,
-        "window": true,
-        "location": true,
-        "document": true,
-        "FileReader": true,
-        "XMLSerializer": false,
-        "DOMParser": true,
-        "Image": false,
-        "Koala": true,
-        "BasiGX": true,
-        "btoa": true,
-        "d3": false,
-        "download": false,
-        "moment": true,
-        "html2canvas": true,
-        "turf": true,
-        "Set": true,
-        "Blob": true,
-        "XMLHttpRequest": true,
-        "FormData": true,
-        "shpwrite": true,
         "atob": true,
-        "Uint8Array": true,
-        "TextDecoder": true,
-        "TextEncoder": true,
-        "Papa": true,
-        "jsts": true,
+        "BasiGX": true,
+        "Blob": true,
+        "btoa": true,
+        "cancelAnimationFrame": false,
+        "d3": false,
         "D3Util": true,
+        "document": true,
+        "DOMParser": true,
+        "download": false,
+        "Ext": true,
+        "File": false,
+        "FileReader": true,
+        "FormData": true,
+        "GeoExt": true,
         "GeoStyler": false,
         "GeoStylerGeoJsonParser": false,
-        "GeoStylerOpenlayersParser": false,
-        "GeoStylerSLDParser": false,
-        "GeoStylerQGISParser": false,
         "GeoStylerMapboxParser": false,
+        "GeoStylerOpenlayersParser": false,
+        "GeoStylerQGISParser": false,
+        "GeoStylerSLDParser": false,
+        "html2canvas": true,
+        "Image": false,
+        "jsts": true,
+        "Koala": true,
+        "location": true,
+        "moment": true,
+        "ol": true,
+        "Papa": true,
         "React": false,
         "ReactDOM": false,
         "requestAnimationFrame": false,
-        "cancelAnimationFrame": false
+        "Set": true,
+        "shpwrite": true,
+        "TextDecoder": true,
+        "TextEncoder": true,
+        "turf": true,
+        "Uint8Array": true,
+        "window": true,
+        "XMLHttpRequest": true,
+        "XMLSerializer": false
     },
     "rules": {
         "comma-dangle": 2,
