Mobile elan scenarios

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -101,7 +101,8 @@
                 "drawBtn",
                 "createVectorLayerBtn",
                 "importVectorLayerBtn",
-                "detectionLimitBtn"
+                "detectionLimitBtn",
+                "ScenarioAlertBtn"
             ],
             "vectorIcons": [
                 {
