commit of modified metadata files

--- a/src/resources/appContext3.json
+++ b/src/resources/appContext3.json
@@ -54,6 +54,12 @@
       "mapLayers": [
 	{
           "uuid": "odl_meta"
+        },
+	{
+          "uuid": "joined_new_meta"
+        },
+	{
+          "uuid": "messstellle_meta"
         }
 ], 
       "metadataSearchFields": [
@@ -84,9 +90,9 @@
         "measureBtn"
       ], 
       "urls": {
-        "geoserver-base-url": "http://localhost:8082/geoserver/bfs/", 
+        "geoserver-base-url": "http://localhost:8082/geoserver/gwgisws/", 
         "irix-servlet": "https://www.imis.bfs.de/irix/irix-client/IRIXClient", 
-        "layerprofile": "https://www.imis.bfs.de/gis_client_configs/layerprofile.json", 
+        "layerprofile": "classic/resources/layerprofile.json", 
         "layerset": "classic/resources/layerset.json", 
         "metadata-search": "https://www.imis.bfs.de/ogc/catalog/srv/ger/csw?", 
         "metadata-xml2json": "/resources/", 
