--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -5,6 +5,7 @@
                 "metadata-xml2json": "http://10.133.7.82/geonetwork/srv/api/0.1/records/",
                 "metadata-search": "http://10.133.7.82/geonetwork/srv/ger/csw?",
                 "spatial-search": "http://10.133.7.82/ogc/bfs/ows",
+                "geoserver-base-url": "http://10.133.7.82/ogc/bfs/ows",
                 "print-servlet": "http://10.133.7.82/bfs-printservice/print/",
                 "irix-servlet": "http://10.133.7.82/irix-servlet",
                 "irix-context": "resources/irixContext.json",
