Remove istanbul-middleware

--- a/src/package.json
+++ b/src/package.json
@@ -7,11 +7,10 @@
         "pretest": "npm run lint",
         "lint": "eslint -c .eslintrc app/ classic/ modern/ overrides/ && eslint -c test/.eslintrc test/",
         "lint-fix": "eslint --fix -c .eslintrc app/ classic/ modern/ && eslint --fix -c test/.eslintrc test/",
-        "test": "npm-run-all --parallel --race test:serve test:all",
+        "test": "npm-run-all --parallel --race test:all",
         "test:all": "npm-run-all test:classic test:modern",
         "test:classic": "karma start karma.conf.js --single-run --toolkit classic",
         "test:modern": "karma start karma.conf.js --single-run --toolkit modern",
-        "test:serve": "node test/tasks/serve-sourcecode.js",
         "test:watch": "karma start karma.conf.js",
         "combine-coverages": "istanbul report --root coverage --dir coverage-combined",
         "coverage-summary": "istanbul report --root coverage text-summary",
@@ -32,7 +31,6 @@
         "expect.js": "0.3.1",
         "express": "4.17.1",
         "istanbul": "0.4.5",
-        "istanbul-middleware": "0.2.2",
         "jsduck": "1.1.2",
         "karma": "5.0.9",
         "karma-chrome-launcher": "3.1.0",
