Adapt app context and nginx proxy to new vm

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -19,15 +19,15 @@ server {
 
     location /ogc {
         proxy_set_header Origin "";
-        proxy_pass http://bfs-docker.intranet.terrestris.de/ogc;
+        proxy_pass http://10.133.7.220/ogc;
     }
     location /geonetwork {
-        proxy_pass http://bfs-docker.intranet.terrestris.de/geonetwork;
+        proxy_pass http://10.133.7.220/geonetwork;
     }
     location /irix-servlet {
-        proxy_pass http://bfs-docker.intranet.terrestris.de/irix-servlet;
+        proxy_pass http://10.133.7.220/irix-servlet;
     }
     location /bfs-printservice {
-        proxy_pass http://bfs-docker.intranet.terrestris.de/bfs-printservice;
+        proxy_pass http://10.133.7.220/bfs-printservice;
     }
 }
