add style for routing layer

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -224,7 +224,13 @@
             ],
             "drawLayerName": "Zeichnungen",
             "redLineLayerName": "Messungen",
-            "rodosFolderName": "RODOS-Prognosen"
+            "rodosFolderName": "RODOS-Prognosen",
+            "routing": {
+                "routeStyle": {
+                    "color": "#ff0000",
+                    "stroke": 3
+                }
+            }
         }
     },
     "success": true,
