Squashed commit of the following:
commit 7a1e56405b27b09f6cc14e9f7b7528eeef7c37ae
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Wed Nov 18 21:08:06 2020 +0100

    Request API

commit e72ab87b6369fcab33e30a3502a149f4f7b5de2d
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Wed Nov 18 16:16:58 2020 +0100

    Add openrouteservice package

commit c38159283cc4c0fbe8e24a566a64ecc677aca441
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Wed Nov 18 15:45:55 2020 +0100

    Add Translation

commit a24a0ceba804df794e7d77aa5e6f3549708720f4
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Wed Nov 18 14:52:01 2020 +0100

    WIP translation

commit 82984ac7a194be6410f2d47036dd441474666902
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Wed Nov 18 14:39:37 2020 +0100

    Make collapsible

commit 68f30e0200151db01451033b0fafee9f1eab42a3
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Wed Nov 18 13:00:58 2020 +0100

    Move UI strings to viewmodel

commit 53a0c2cdeca850fb412e3793395dc8d8fd08389d
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Wed Nov 18 10:51:58 2020 +0100

    Add TODOs for temporary code

commit 22ed7e6e79820a27c8f1bab2a967fb92ff1068cc
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Wed Nov 18 09:41:35 2020 +0000

    Apply 1 suggestion(s) to 1 file(s)

commit 6084f58fbce5e4a4ef21030c214be2a9133f7ac9
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Tue Nov 17 18:55:10 2020 +0100

    Move routing request to controller

commit de49a42fd698768bfe4f6ebcb99365f919a49284
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Tue Nov 17 18:22:41 2020 +0100

    Get coordinates by clicking on map

commit 6051779d12dc46f414eb3fb4d6aa72eece753d02
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Tue Nov 17 17:16:08 2020 +0100

    Connect textfields to viewModel

commit da0c2122954d01acd138e633f5922edc78e68b3f
Author: Jakob Miksch <jakob@meggsimum.de>
Date:   Tue Nov 17 11:49:43 2020 +0100

    Add Drowdown

commit f432b6f6f5fd76c850adcea8b056ba7db718512d


--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -30,6 +30,7 @@
         "localStorage": true,
         "moment": true,
         "ol": true,
+        "Openrouteservice": false,
         "Papa": true,
         "React": false,
         "ReactDOM": false,
