add handling for elevation profile

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -228,11 +228,16 @@
             "routing": {
                 "routeStyle": {
                     "color": "#ff0000",
-                    "stroke": 3
+                    "width": 5
                 },
                 "waypointStyle": {
                     "markerSize": 38,
                     "color": "black"
+                },
+                "elevationStyle": {
+                    "fill": "lightgray",
+                    "stroke": "gray",
+                    "radius": 2.5
                 }
             }
         }
