--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ./docker/default.conf:/etc/nginx/conf.d/default.conf
   bfs-app:
-    image: terrestris/sencha-cmd:version-7.2.0.56
+    image: terrestris/sencha-cmd:version-7.2.0.56-3
     ports:
       - 1841:1841
     volumes:
