use actual urls for bfs and geocoding

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -30,4 +30,7 @@ server {
     location /bfs-printservice {
         proxy_pass http://10.133.7.220/bfs-printservice;
     }
+    location /geocoding-dev {
+        proxy_pass https://entw-imis.lab.bfs.de/photon;
+    }
 }
