Add avoid area functionality

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -244,6 +244,12 @@
                     "fill": "#ffffff",
                     "stroke": "#ffffff",
                     "radius": 3
+                },
+                "avoidAreaStyle": {
+                    "strokeColor": "#000000",
+                    "width": 4,
+                    "fillColor": "#ff0000",
+                    "opacity": 0.2
                 }
             }
         }
