--- a/src/resources/appContextTest.json
+++ b/src/resources/appContextTest.json
@@ -118,7 +118,34 @@
                 "http://ows.mundialis.de/services/service" ],
             "drawLayerName": "Zeichnungen",
             "redLineLayerName": "Messungen",
-            "rodosFolderName": "RODOS-Prognosen"
+            "rodosFolderName": "RODOS-Prognosen",
+            "routing": {
+                "openrouteserviceUrl": "https://entw-imis.lab.bfs.de/ors",
+                "photonUrl": "/geocoding-dev",
+                "routeStyle": {
+                    "color": "#ff0000",
+                    "width": 5
+                },
+                "routeSegmentStyle": {
+                    "color": "#ffffff",
+                    "width": 4
+                },
+                "waypointStyle": {
+                    "markerSize": 38,
+                    "color": "black"
+                },
+                "elevationStyle": {
+                    "fill": "#ffffff",
+                    "stroke": "#ffffff",
+                    "radius": 3
+                },
+                "avoidAreaStyle": {
+                    "strokeColor": "#000000",
+                    "width": 4,
+                    "fillColor": "#ff0000",
+                    "opacity": 0.2
+                }
+            }
         }
     },
     "success": true,
